--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div id="app">
       <div class="init-loading">
         <h1>%VITE_APP_NAME%</h1>
-        <img class="img" src="/ico.svg" />
+        <img class="img" src="/vite.svg" />
         <div class="text">载入中……</div>
       </div>
     </div>
