--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
     <title>%VITE_APP_NAME%</title>
     <style>
       .init-loading {
-        height: 100vh;
-        width: 100vw;
+        position: fixed;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        width: fit-content;
         display: flex;
         justify-content: center;
         align-items: center;
